# typebinder

./: .gitignore  Cargo.toml  Makefile  README.md  package.json
assets/: example_file.rs  impero.rs
serde_derive_internals/: lib.rs
serde_derive_internals/internals/: attr.rs
src/: common.rs  export.rs  import.rs  lib.rs  types.rs
src/declarations/: const_enum.rs  interface.rs  type_alias.rs
ts_export/: Cargo.toml
ts_export/examples/: demo.rs
ts_export/src/: display_path.rs  error.rs  exporter.rs  exporter_context.rs  import.rs  lib.rs  path_mapper.rs  process.rs  type_solver.rs
ts_export/src/exporters/: file.rs  mod.rs  stdout.rs
ts_export/src/macros/: context.rs  mod.rs
ts_export/src/process_spawner/: discard.rs  mod.rs  mod_reader.rs
ts_export/src/solvers/: array.rs  chrono.rs  collections.rs  fn_solver.rs  generics.rs  import.rs  inner_generic.rs  mod.rs  option.rs  path.rs  predefined.rs  primitives.rs  reference.rs  serde_json_value.rs  tuple.rs  vec.rs
ts_export/src/utils/: cargo.rs
ts_export_cli/: Cargo.toml  LICENSE
ts_export_cli/src/: main.rs
ts_json_subset/: Cargo.toml
ts_json_subset/src/: common.rs  export.rs  ident.rs  import.rs  lib.rs  types.rs
ts_json_subset/src/declarations/: const_enum.rs  interface.rs  mod.rs  reexport.rs  type_alias.rs
typebinder/: Cargo.toml
typebinder/examples/: demo.rs
typebinder/src/: display_path.rs  error.rs  exporter_context.rs  import.rs  lib.rs  path_mapper.rs
typebinder/src/contexts/: exporter.rs  import.rs  mod.rs  type_solving.rs
typebinder/src/exporters/: check.rs  file.rs  mod.rs  stdout.rs  utils.rs
typebinder/src/macros/: context.rs  mod.rs
typebinder/src/pipeline/: mod.rs  module_step.rs
typebinder/src/process_spawner/: discard.rs  mod.rs  mod_reader.rs
typebinder/src/solvers/: array.rs  chrono.rs  generics.rs  import.rs  inner_generic.rs  mod.rs  option.rs  path.rs  reference.rs  tuple.rs
typebinder/src/step_spawner/: discard.rs  mod.rs  mod_reader.rs
typebinder/src/type_solving/: fn_solver.rs  generic_constraints.rs  member_info.rs  mod.rs  result.rs  type_info.rs
typebinder/src/type_solving/solvers/: array.rs  chrono.rs  collections.rs  generics.rs  import.rs  mod.rs  nonempty.rs  option.rs  path.rs  primitives.rs  ranges.rs  reference.rs  serde_json_value.rs  skip_serialize_if.rs  tuple.rs
typebinder/src/utils/: cargo.rs  display_path.rs  inner_generic.rs  mod.rs
typebinder_cli/: Cargo.toml
typebinder_cli/src/: main.rs
typebinder_test_suite/: Cargo.toml
typebinder_test_suite/src/: main.rs  models.rs
typebinder_web_playground/: .gitignore  Cargo.toml  Makefile  Makefile.toml  index.html
typebinder_web_playground/src/: lib.rs
