[package]
name = "ts_export"
version = "0.1.0"
authors = ["Impero <op@impero.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.60", features = ["derive"] }
thiserror = "1.0"
serde_derive_internals = { path = "../serde_derive_internals" } 
ts_json_subset = { path = "../ts_json_subset" }
log = "0.4.14"
serde_json = "1.0.62"