[package]
name = "typebinder"
version = "0.1.0"
authors = ["Impero <op@impero.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0" }
proc-macro2 = "1.0"
displaythis = "1.0"
thiserror = "1.0"
serde_derive_internals = "0.26"
ts_json_subset = { path = "../ts_json_subset" }
log = "0.4"
serde_json = "1.0"
cargo_toml = "0.13"
indexmap = "1.0"
diff = "0.1.12"

[dev-dependencies]
pretty_env_logger = "0.4"
