[package]
name = "typebinder_cli"
version = "0.1.0"
authors = ["Impero <op@impero.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typebinder = { path = "../typebinder" }
structopt = "0.3"
pretty_env_logger = "0.4"