[package]
name = "typebinder_web_playground"
version = "0.1.0"
edition = "2018"
authors = ["Olivier Pinon <op@impero.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
console_log = "0.2"
dprint-plugin-typescript = "0.59.1"
log = "0.4"
seed = "0.8.0"
typebinder = { path = "../typebinder" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
